# skillcorner-tech-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
.github/workflows/: docker-publish.yml
grafana/dashboards/: main_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
src/: config.py  inference.py  logger.py  metrics.py  pipeline.py  video.py
